crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__invalid_characters_py312.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
assertion_line: 319
---
PLE2510 [*] Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_pre_py312.py:2:9
  |
1 | # https://github.com/astral-sh/ruff/issues/18816
2 | b = f"{'␈'}"
  |         ^
3 | b = f"{value:␈}"
4 | b = f"hello␈world"
  |
help: Replace with escape sequence
1 | # https://github.com/astral-sh/ruff/issues/18816
  - b = f"{'␈'}"
2 + b = f"{'\b'}"
3 | b = f"{value:␈}"
4 | b = f"hello␈world"
5 | b = "hello␈world"

PLE2510 [*] Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_pre_py312.py:3:14
  |
1 | # https://github.com/astral-sh/ruff/issues/18816
2 | b = f"{'␈'}"
3 | b = f"{value:␈}"
  |              ^
4 | b = f"hello␈world"
5 | b = "hello␈world"
  |
help: Replace with escape sequence
1 | # https://github.com/astral-sh/ruff/issues/18816
2 | b = f"{'␈'}"
  - b = f"{value:␈}"
3 + b = f"{value:\b}"
4 | b = f"hello␈world"
5 | b = "hello␈world"

PLE2510 [*] Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_pre_py312.py:4:12
  |
2 | b = f"{'␈'}"
3 | b = f"{value:␈}"
4 | b = f"hello␈world"
  |            ^
5 | b = "hello␈world"
  |
help: Replace with escape sequence
1 | # https://github.com/astral-sh/ruff/issues/18816
2 | b = f"{'␈'}"
3 | b = f"{value:␈}"
  - b = f"hello␈world"
4 + b = f"hello\bworld"
5 | b = "hello␈world"

PLE2510 [*] Invalid unescaped character backspace, use "\b" instead
 --> invalid_characters_pre_py312.py:5:11
  |
3 | b = f"{value:␈}"
4 | b = f"hello␈world"
5 | b = "hello␈world"
  |           ^
  |
help: Replace with escape sequence
2 | b = f"{'␈'}"
3 | b = f"{value:␈}"
4 | b = f"hello␈world"
  - b = "hello␈world"
5 + b = "hello\bworld"
