crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__logging-too-many-args_logging_too_many_args.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE1205 Too many arguments for `logging` format string
 --> logging_too_many_args.py:3:1
  |
1 | import logging
2 |
3 | logging.warning("Hello %s", "World!", "again")  # [logging-too-many-args]
  | ^^^^^^^^^^^^^^^
4 |
5 | logging.warning("Hello %s", "World!", "again", something="else")
  |

PLE1205 Too many arguments for `logging` format string
 --> logging_too_many_args.py:5:1
  |
3 | logging.warning("Hello %s", "World!", "again")  # [logging-too-many-args]
4 |
5 | logging.warning("Hello %s", "World!", "again", something="else")
  | ^^^^^^^^^^^^^^^
6 |
7 | logging.warning("Hello %s", "World!")
  |

PLE1205 Too many arguments for `logging` format string
  --> logging_too_many_args.py:29:1
   |
27 | from logging import info, error, warning
28 |
29 | warning("Hello %s", "World!", "again")  # [logging-too-many-args]
   | ^^^^^^^
30 |
31 | warning("Hello %s", "World!", "again", something="else")
   |

PLE1205 Too many arguments for `logging` format string
  --> logging_too_many_args.py:31:1
   |
29 | warning("Hello %s", "World!", "again")  # [logging-too-many-args]
30 |
31 | warning("Hello %s", "World!", "again", something="else")
   | ^^^^^^^
32 |
33 | warning("Hello %s", "World!")
   |
