crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__max_args.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0913 Too many arguments in function definition (6 > 4)
 --> too_many_arguments_params.py:3:5
  |
3 | def f(x, y, z, skip_t, skip_u, skip_v):
  |     ^
  |

PLR0913 Too many arguments in function definition (6 > 4)
 --> too_many_arguments_params.py:9:5
  |
9 | def f(x, y, z, t, u, v):
  |     ^
  |
